docs/css/styles.css
/* css styles */
html {
    scroll-padding-top: 80px;
    /* To deal with quarto navbar covering headers when linking to them */
}

.indent {
    margin-left: 2rem;
}

details p {
    padding-top: 0.4em;
    margin-left: 0.6em;
}

.semibold {
    font-weight: 550;
}

.red {
    background-color: red;
    color: red !important;
}

/* To fix alignment issues with the quarto-popover-glossary extension */
.glossary-def {
    text-align: left;
    padding: 1em;
    min-width: 50vw !important;
    overflow-y: auto;
    max-height: 90vh;
    margin-top: 1em !important;
}

.scrollable-glossary-div {
    max-height: 250px !important;
    /*_return change this to vh?*/
    overflow-y: auto;
}

div.details blockquote:last-child {
    max-height: 250px !important;
    overflow-y: auto !important;
    margin-bottom: 5vh !important;
    /* To give some visual break between the scrollable text and the next element below it */
}

blockquote p {
    line-height: 1.3;
}

.scroll-output {
    max-height: 400px !important;
    /*_return change this to vh?*/
    overflow-y: auto;
}

.scroll-def {
    max-height: 20vh !important;
    /*_return change this to vh?*/
    overflow-y: auto;

}

.cell-output-stdout {
    max-height: 400px !important;
    /*_return change this to vh?*/
    overflow-y: auto;
}


a.glossary-ref.definition-ref {
    font-weight: bold;
    color: DodgerBlue;
}

a.glossary-ref.definition-ref {
    text-decoration: none !important;
}

i.fa-info-circle {
    color: DodgerBlue;
}

i.fa-circle-exclamation {
    color: red;
}

.column-margin {
    z-index: 100 !important;
    /* so that it does not lay on top of the api interactive overlay */
}

nav#TOC {
    background-color: white;
}

._exclamation {
    color: red !important;
}

div.jse-tree-mode {
    background-color: #f9f5ff !important;
}

